--- a/thesis/03_implementation/03_native_libary.tex
+++ b/thesis/03_implementation/03_native_libary.tex
@@ -1,5 +1,5 @@
 \section{Using native library}
-\texttt{Libpg\_query} provides \texttt{pg\_query\_parse} function, which takes \texttt{const char*} parameter (the SQL query) and returns parse tree in form of JSON. However, because of difference between native code and java byte code, we can't directly import the C library into our Scala code.
+\textit{Libpg\_query} provides \texttt{pg\_query\_parse} function, which takes \texttt{const char*} parameter (the SQL query) and returns parse tree in form of JSON. However, because of difference between native code and java byte code, we can't directly import the C library into our Scala code.
 
 \subsection{Native code and byte code}
 Native code is compiled to run on a specific processor. Examples of languages that produce native code after compilation are C, C++. That means, every time we want to run our C program, it has to be recompiled for that specific operating system or processor.
@@ -9,7 +9,7 @@ Java byte code, on the other hand, is compiled source code from i.e. Java, Scala
 \subsection{Java native interface}
 JNI is programming interface for writing Java native methods.\cite{JNI} It is used to enable Java code to use native applications and libraries. The native functions are implemented in separate generated \texttt{.c} or \texttt{.cpp} file. Let's say we defined our class with native method like this:
 
-\begin{lstlisting}[language=scala, basicstyle=\ttfamily, showstringspaces=false]
+\begin{lstlisting}[language=scala, basicstyle=\ttfamily, showstringspaces=false, caption={Scala class with native method}, xleftmargin=.05in]
 package com.pgquery
 
 class Wrapper {
@@ -19,7 +19,7 @@ class Wrapper {
 
 Then we compile the file with the Scala source code. From the compiled code we generate the JNI header using \texttt{javah} command. The definition of the native function then looks like this: 
 
-\begin{lstlisting}[language=c, basicstyle=\ttfamily, showstringspaces=false]
+\begin{lstlisting}[language=c, basicstyle=\ttfamily, showstringspaces=false, caption={Generated JNI header}, xleftmargin=.05in]
 JNIEXPORT void JNICALL Java_com_pgquery_Wrapper_parse
   (JNIEnv *env, jobjectobj, jstring string)
 {
@@ -34,6 +34,6 @@ The JNI header is then compiled, with included JNI headers from local Java JDK. 
 
 
 \subsection{sbt-jni}
-\texttt{sbt-jni} library provides a JNI wrapper for Scala. It is a suite of sbt plugins for simplifying the creation and distribution of JNI programs. To name the ones used, \texttt{JniJavah} works as a wrapper around the \texttt{javah} command to generate headers for classes with \texttt{@native methods}. It uses \texttt{CMake} to compile the native libraries.
-Next one used is \texttt{JniLoad}, which enables correct loading of shared libraries through \texttt{@nativeLoader} annotation. 
+\texttt{sbt-jni} library provides a JNI wrapper for Scala. It is a suite of sbt plugins for simplifying the creation and distribution of JNI programs. To name the ones used, \textit{JniJavah} works as a wrapper around the \texttt{javah} command to generate headers for classes with \texttt{@native methods}. It uses \textit{CMake} to compile the native libraries.
+Next one used is \textit{JniLoad}, which enables correct loading of shared libraries through \texttt{@nativeLoader} annotation. 
 
